Add license to jinja template

--- a/recipe/meta.yaml.j2
+++ b/recipe/meta.yaml.j2
@@ -82,6 +82,7 @@ outputs:
       license_file:
         - << m.lang >>_<< m.name >>/LICENSE
         - << m.lang >>_<< m.name >>/LICENSES_SOURCES
+      license: << m.license >>
 <% endfor -%>
 {% endif %}  # << lang >>
 <% endfor %>
